fixed the socket problem for receiving chat messages in both directions added an attribute the client side to monitor the message origin using the socket id and determin the flex align position of the message

--- a/client/src/components/chats.css
+++ b/client/src/components/chats.css
@@ -70,10 +70,12 @@ main {
 }
 .message-inner-container .message-container {
   padding: 12px 24px;
-  color: white;
-  background-color: rgba(255, 255, 255, 0.1);
   max-width: 50%;
-  align-self: flex-end;
   margin: 20px 20px 0 0;
   border-radius: 16px;
+}
+
+.message-container span {
+  font-size: 12px;
+  color: gray;
 }
